<resources>
    <string name="app_name">My StudyBuddy</string>
    <string name="title_activity_main2">My StudyBuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="share_detail">Share Details</string>
    <string name="contact_to_publisher">Please contact Publisher for further details.</string>

    <string name="valid_access_code_invalid_email_pass">Correct Access code, Invalid Email or Password</string>
    <string name="invalid_access_code">Invalid Access code</string>
    <string name="access_code_exp">Access code expired. Please Contact Publisher</string>
    <string name="access_code">Access code</string>
    <string name="already_register_user">Email already registered. Please login to access.</string>
    <string name="some_error_occurred">Some error occurred. Please try again after sometime.</string>
    <string name="deleted">Pdf Deleted Successfully.</string>

    <!-- Strings related to login -->
    <string name="no_chapter">No Chapter Found</string>
    <string name="no_username">Do not have username password ? </string>
    <string name="share_details">Share your details to get username password</string>
    <string name="school_name">School Name</string>
    <string name="school_address">School Address</string>

    <string name="prompt_email">Email</string>
    <string name="ph_no">Phone Number</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="register_first">Register With username and password first</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_studentdash_bord">StudentdashBord</string>
    <string name="title_activity_quetion_paper">QuetionPaper</string>
    <string name="title_activity_te_chapter">TeChapter</string>
    <string name="title_activity_paper_confirmition">PaperConfirmition</string>
    <string name="title_activity_students__chapters">Students_Chapters</string>
    <string name="title_activity_take__test">Take_Test</string>
    <string name="title_activity_books__access__code">Books_Access_Code</string>


    <string name="error_log_file" translatable="false">error_log.txt</string>
    <string name="library_root_folder" translatable="false">library</string>
    <string name="library_file" translatable="false">library.json</string>
    <string name="content_description_page_image">Preview of a page to be colored</string>
    <string name="content_description_book_image">Preview of a book to be colored</string>
    <string name="coloring_end_dialog_title">Finish?</string>
    <string name="coloring_end_dialog_positive">Save and exit</string>
    <string name="coloring_end_dialog_neutral">Just Exit</string>
    <string name="content_description_back_button">Goes back</string>
    <string name="content_description_image_gallery">Shows the image gallery</string>
    <string name="content_description_share_button">Shares the selected image</string>
    <string name="content_description_delete_button">Deletes the selected image</string>
    <string name="content_description_about_button">Shows information about the app</string>
    <string name="content_description_preferences_button">Shows the preferences</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="error_log_dialog_send_report">Send report</string>
    <string name="content_description_view_image_button">Shows selected image in full screen.</string>
    <string name="toast_external_storage_unavailable">External storage unavailable. Cannot store or retrieve pictures.</string>
    <string name="toast_gallery_no_pictures">No colored pictures available yet for that book.</string>
    <string name="animation_duration" translatable="false">500</string>
    <string name="hint">Select from the hint given below :</string>
    <string name="e_book">E-book :</string>

    <string name="long_q_a">Long Answer Questions</string>
    <string name="cls">Class</string>
    <string name="short_q_a">Short Answer Questions</string>
    <string name="mm">M.M</string>
    <string name="mcqs">MCQs</string>
    <string name="tf">True / False</string>
    <string name="tru">True</string>
    <string name="fals">False</string>

    <string name="fill_in_blank">Fill in blank</string>
    <string name="match_col">Match the Column</string>
    <string name="total">Total</string>
    <string name="q">Q-</string>
    <string name="question">Question</string>
    <string name="opt_a">A .</string>
    <string name="opt_b">B .</string>
    <string name="opt_c">C .</string>
    <string name="opt_d">D .</string>
    <string name="ch_name">Chapter Name</string>
    <string name="congrats">Congratulations</string>
    <string name="complete_test_msg">You have Completed your test. Click Submit button to Save your Score.</string>
    <string name="question_submit_msg">A copy of this paper will be emailed to your registered Email Account.</string>
    <string name="new_about_us">BRAINMATE is the latest development in the long standing history of PRAGATI PRAKASHAN. It has been established as an independent unit to mainly cater to children school books segment. It was established in September 09\' and has already started bearing fruits. With an experience of over 50 years in publishing, an established network, this new venture aims to soon become an applauded entity in Pragati\'s stable.</string>
    <string name="old_text">"he distribution of copies or phonorecords of a work to the public by sale or other transfer of ownership, or by rental, lease, or lending. The offering to distribute copies or phonorecords to a group of people for purposes of further distribution, public performance, or public display, constitutes publication. A public performance or display of a work does not of itself constitute publication.To perform or display a work  means –
        (1) to perform or display it at a place open to the public or at any place where a substantial number of people outside a normal circle of a family and its social acquaintances is gathered; or"</string>

    <string name="nav_about_us_title">Developed and maintained by Techive</string>
    <string name="activity_score">activity score</string>
    <string name="generated_paper">Test paper generated</string>


    <string name="techive_in">http://www.techive.in/</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="home">Home</string>
    <string name="add_access_code">Add Accesses Code</string>
    <string name="paper">Papers</string>
    <string name="history">History</string>
    <string name="exp_book">Expired Books</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="customer_support">Customer Support</string>
    <string name="invite_friends">Invite Friends</string>

    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="fill_details">Fill the Details</string>
    <string name="test_report">Olympiad Test Report</string>
    <string name="logout">Logout</string>
    <string name="no_data">No data found.</string>

    <string name="go_to_website">Go to Website</string>

    <string name="correct_ans">Correct Answer\t\t</string>
    <string name="your_ans">Your Answer</string>

    <string name="publisher_name">BrainMate Education Publisher</string>
    <string name="no_internet">Internet not Connected.</string>
    <string name="retry">Retry</string>
    <string name="connected">Connection Established</string>

    <string name="paper_name">Paper Title.</string>

    <string name="hour">Hr</string>
    <string name="minute">Min</string>
    <string name="duration">Total Time.\t\t</string>
    <string name="zero">0</string>
    <string name="subject">Subject.</string>
    <string name="message">Message.</string>
    <string name="tot_ques">Total Questions.</string>
    <string name="tot_marks">Total Marks.</string>
    <string name="back">Back.</string>
    <string name="answer">a,b,c…</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save1">Save</string>
    <string name="paint">Paint</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="title_activity_book__subjects">Book_Subjects</string>
    <string name="title_activity_stu__classes">Stu_Classes</string>
    <string name="title_activity_stu__subjects">Stu_Subjects</string>
    <string name="title">Title</string>
    <string name="select_language">Select Language</string>
    <string name="thanksmsg">Thank you for registering with us! Your acount will get activated after verification. you ill getactivation email once verification is done</string>
    <string name="school">School</string>
    <string name="passvalid"><![CDATA[Password must contain atlest 1 uppercase, 1 lower case, 1 numeric & 1 special character.]]></string>
    <string name="active">info@brainmate.co.in</string>
    <string name="th">Your account is not yet activated. You will get an activation email once verification is done. For any query please contact at 6398863703 or info@brainmate.co.in</string>

</resources>
