<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:iconTint="#006A62"
            android:title="@string/home"
            android:visible="false"/>
        <item
            android:id="@+id/Addcode"
            android:icon="@drawable/code"
            android:iconTint="#006A62"
            android:title="@string/add_access_code" />
        <item
            android:id="@+id/QuestionPapers"
            android:icon="@drawable/ic_catalog"
            android:iconTint="#006A62"
            android:title="@string/paper"
            android:visible="false" />
        <item
            android:id="@+id/PfdPaper"
            android:icon="@drawable/ic_catalog"
            android:iconTint="#006A62"
            android:title="@string/history" />
        <item
            android:id="@+id/Expiredbokks"
            android:icon="@drawable/ic_packages"
            android:iconTint="#006A62"
            android:title="@string/exp_book"
            android:visible="false" />

        <item
            android:id="@+id/myprofile"
            android:icon="@drawable/ic_person"
            android:iconTint="#006A62"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_change_pwd"
            android:icon="@drawable/ic_key"
            android:iconTint="#006A62"
            android:title="@string/change_password" />

        <item
            android:id="@+id/nav_gallery2"
            android:icon="@drawable/shopping"
            android:iconTint="#006A62"
            android:title="@string/qr_code_scanner"
            android:visible="false" />
        <item
            android:id="@+id/Costumer_Support"
            android:icon="@drawable/ic_chat"
            android:iconTint="#006A62"
            android:title="@string/customer_support"
            android:visible="false"/>

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/InviteFriends"
                android:icon="@drawable/ic_share"
                android:iconTint="#006A62"
                android:title="@string/invite_friends" />
            <item
                android:id="@+id/contactus"
                android:icon="@drawable/ic_contact"
                android:iconTint="#006A62"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/Aboutus"
                android:icon="@drawable/ic_info"
                android:iconTint="#006A62"
                android:title="@string/about_us" />

            <item
                android:id="@+id/BuyOnlineBook"
                android:icon="@drawable/ic_baseline_menu_book_24"
                android:iconTint="#006A62"
                android:title="Buy Books Online" />

            <item
                android:id="@+id/BuyEBook"
                android:icon="@drawable/ic_baseline_book_online_24"
                android:iconTint="#006A62"
                android:title="Buy Ebooks       " />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:iconTint="#006A62"
                android:title="Logout" />
        </group>
        <group
            android:id="@+id/nav_footer">
            <item
                android:id="@+id/nav_log_version"
                app:actionLayout="@layout/footer_navigation_menu"
                android:title="" />
        </group>
    </group>
</menu>
