<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baclog"
    android:orientation="vertical"
    tools:context=".mains.ShareDetailsActivity">

    <include layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/baclog"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/share_details"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/Tchers_full_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/etRegTeacherName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/back"
                    android:hint="@string/teacher_name"
                    android:inputType="textPersonName"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/etRegAccessCode"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back"
                    android:hint="@string/access_code"
                    android:inputType="number"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <EditText
                    android:id="@+id/etRegEmail"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back"
                    android:hint="@string/prompt_email"
                    android:inputType="textWebEmailAddress"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />


                <EditText
                    android:id="@+id/etRegSchoolName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back"
                    android:hint="@string/school_name"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <EditText
                    android:id="@+id/etRegSchoolAddress"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back"
                    android:hint="@string/school_address"
                    android:inputType="textPostalAddress"
                    android:maxLength="10"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <EditText
                    android:id="@+id/etRegPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back"
                    android:hint="@string/ph_no"
                    android:inputType="phone"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <Button
                    android:id="@+id/btnRegSendDetails"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/roundloginbutton"
                    android:text="Send Details"
                    android:textColor="#fff" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>