<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/listcard"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/history"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btnActivityScore"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_border"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/activity_score"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGeneratedPaper"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_border"
            android:text="@string/generated_paper"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>