<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="2dp"
    android:paddingTop="1dp"
    android:paddingRight="2dp">

    <TextView
        android:id="@+id/txtTrueFalseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@color/color4"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:text="@string/ch_name"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listcard"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <CheckBox
                    android:id="@+id/checkboxturefalse"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="start" />

                <TextView
                    android:id="@+id/Questionnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/q"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/question"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="60dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/trueQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/color4"
                    android:text="@string/tru"
                    android:checked="true"
                    android:textColor="#434242" />

                <RadioButton
                    android:id="@+id/falseQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:buttonTint="@color/color4"
                    android:text="@string/fals"
                    android:checked="true"
                    android:textColor="#434242"
                    android:layout_marginStart="50dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>