<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="2dp"
    android:paddingTop="1dp"
    android:paddingRight="2dp">

    <TextView
        android:id="@+id/txtShortAnsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@color/color4"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:text="@string/ch_name"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listcard"
        android:orientation="horizontal"
        android:padding="15dp">

        <CheckBox
            android:id="@+id/checkbox10"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start" />

        <TextView
            android:id="@+id/Questionnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/q"
            android:textColor="#000"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/question"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>