<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="9">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <ImageButton
                android:id="@+id/small_brush"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#fff"
                android:contentDescription="@string/small"
                android:src="@drawable/small_one"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <ImageButton
                android:id="@+id/small_brush_one"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#fff"
                android:contentDescription="@string/small"
                android:src="@drawable/small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <ImageButton
                android:id="@+id/medium_brush"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#fff"

                android:src="@drawable/medium_one" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="9">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <ImageButton
                android:id="@+id/medium_brush_one"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#fff"
                android:contentDescription="@string/medium"
                android:src="@drawable/medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <ImageButton
                android:id="@+id/large_brush"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#fff"
                android:contentDescription="@string/large"
                android:src="@drawable/large_one" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <ImageButton
                android:id="@+id/large_brush_one"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#fff"
                android:contentDescription="@string/large"
                android:src="@drawable/large"

                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>